--- a/MovieStoreMvc/Views/Movies/Index.cshtml
+++ b/MovieStoreMvc/Views/Movies/Index.cshtml
@@ -10,6 +10,29 @@
     <a asp-action="Create">Create New</a>
 </p>
 
+<form asp-controller="Movies" asp-action="Index" method="get">
+    <p>
+
+        @* <select name="movieStatus" asp-items="(SelectList)ViewBag.MovieStatusList">
+        </select> *@
+
+        @Html.DropDownList("movieStatus", (SelectList)ViewBag.MovieStatusList, new { @class="btn btn-outline-secondary dropdown-toggle dropdown-toggle-split" })
+
+
+        Title: <input type="text" name="SearchString" value="@ViewData["CurrentFilter"]"
+                    style="padding: 0.375rem 0.75rem;
+                        font-size: 1rem;
+                        font-weight: 400;
+                        line-height: 1.5;
+                        color: #212529;
+                        background-color: #fff;
+                        background-clip: padding-box;
+                        border: 1px solid #ced4da;
+                        border-radius: 0.25rem" />
+        <input type="submit" value="Filter" class="btn btn-primary" />
+    </p>
+</form>
+
 <div class="row">
 @foreach (var item in Model)
 {
