--- a/MovieStoreMvc/Views/Shared/_Layout.cshtml
+++ b/MovieStoreMvc/Views/Shared/_Layout.cshtml
@@ -50,7 +50,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="SeatTypes" asp-action="Index">SeatType</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Roomtypes" asp-action="Index">Roomtype</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="RoomTypes" asp-action="Index">RoomType</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Cinemas" asp-action="Index">Cinema</a>
@@ -60,6 +60,12 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Seats" asp-action="Index">Seat</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Showtimes" asp-action="Index">Showtimes</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Tickets" asp-action="Index">Ticket</a>
                         </li>
                         
                     </ul>
