--- a/MovieStoreMvc/Views/Showtimes/Create.cshtml
+++ b/MovieStoreMvc/Views/Showtimes/Create.cshtml
@@ -31,7 +31,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Price" class="control-label"></label>
-                <input asp-for="Price" class="form-control" />
+                <input asp-for="Price" class="form-control" value="100000"/>
                 <span asp-validation-for="Price" class="text-danger"></span>
             </div>
             
