--- a/MovieStoreMvc/Views/Shared/_Layout.cshtml
+++ b/MovieStoreMvc/Views/Shared/_Layout.cshtml
@@ -87,6 +87,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Surcharges" asp-action="Index">Surcharge</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Statistics" asp-action="Index">Statistic</a>
+                        </li>
                         
                     </ul>
                     <partial name="_LoginPartial" />
