update display showtimes

--- a/MovieStoreMvc/Views/Tickets/Create.cshtml
+++ b/MovieStoreMvc/Views/Tickets/Create.cshtml
@@ -88,7 +88,7 @@
 
                     $.ajax({
                         type: 'GET',
-                        url: 'GetShowtimes?date=' + date,
+                        url: 'GetShowtimes?movie=' + movie + '&cinema=' + cinema + '&date=' + date,
                         success: function (data, status, xhr) {
 
                             $("option.showtimes-option").remove();
